# MyAgent

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  HOWTO.md  README.md  ROADMAP.md  TODO.md  docker-compose.yml  executor.py  pyproject.toml  session_store.py  start.sh  test_api.py  test_config.py
actions/: action.py  mail.py
agents/: head.py  mail.py
docs/: WHISPER_SHORTCUT.md
src/core/: __init__.py  config.py  crypto.py  db.py  docker.py  enc_key_cache.py  executor.py  jwt.py  llm.py  mail_engine.py  memory.py  pyproject.toml  search.py  session_store.py
src/core/actions/: action.py  mail.py  mail_applescript.py  mail_imap.py
src/core/agents/: __init__.py  answer.py  base.py  command.py  core.py  head.py  mail.py
src/core/tools/: __init__.py  defs.py  registry.py  schema.py
static/: index.html
tests/: test_action.py  test_admin_auth.py  test_api.py  test_audit_gaps.py  test_calendar.py  test_cli.py  test_config.py  test_core_agent.py  test_core_tools.py  test_crypto_db.py  test_curated_routes.py  test_curated_store.py  test_device_token.py  test_e2e.py  test_jwt.py  test_mail_by_date.py  test_mail_engine.py  test_mail_model_config.py  test_mail_routes.py  test_mail_service_persistence.py  test_news_curator.py  test_profile_routes.py  test_profile_service.py  test_profile_store.py  test_scheduler.py  test_scheduler_runner.py  test_search_providers.py  test_search_service.py  test_session_store.py  test_whisper_agent.py  test_whisper_async.py  test_whisper_routes.py  test_whisper_service.py
tools/: __init__.py  defs.py
(+95 files in other folders)
