[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mydevteam"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "typer>=0.12",
    "ollama>=0.3",
    "faster-whisper>=1.1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "imapclient>=2.0",
    "cryptography>=41.0",
    "duckduckgo-search>=6.0",
    "readability-lxml>=0.8",
    "requests>=2.31",
    "PyJWT>=2.0",
    "feedparser>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/gateway", "src/services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
