[project]
name = "core"
version = "0.1.0"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "typer>=0.12",
    "ollama>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "imapclient>=2.0",
    "redis>=4.0",
    "cryptography>=41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
